# kiroptimiste

./: .gitignore  README.md
kiroptimiste/: CMakeLists.txt  KKKiroptimiste.cpp  annexe.cpp  annexe.h
kiroptimiste/grenoble/: nodes2.csv
kiroptimiste/nice/: nodes.csv  nodes2.csv
kiroptimiste/paris/: nodes.csv
kiroptimiste/solutions/: bestgeonewville_7janvier1cluster_ordre_1_1.csv  bestgeonewville_7janvier1cluster_ordre_2_0.csv  bestgeonewville_7janvier1cluster_ordre_2_1.csv  bestgeonewville_7janvier1cluster_ordre_2_2.csv  geonewparis_6janvier_ordre1_24647.csv  geonewville_6janvier2cluster_ordre_0_0.csv  geonewville_6janvier2cluster_ordre_0_1.csv  geonewville_6janvier2cluster_ordre_0_10.csv  geonewville_6janvier2cluster_ordre_0_2.csv  geonewville_6janvier2cluster_ordre_0_3.csv  geonewville_6janvier2cluster_ordre_0_4.csv  geonewville_6janvier2cluster_ordre_0_5.csv  geonewville_6janvier2cluster_ordre_0_6.csv  geonewville_6janvier2cluster_ordre_0_7.csv  geonewville_6janvier2cluster_ordre_0_8.csv  geonewville_6janvier2cluster_ordre_0_9.csv  geonewville_7janvier1cluster_ordre_0_0.csv  geonewville_7janvier1cluster_ordre_0_1.csv  geonewville_7janvier1cluster_ordre_0_2.csv  geonewville_7janvier1cluster_ordre_1_0.csv  geonewville_7janvier1cluster_ordre_1_1.csv  geonewville_7janvier2cluster_ordre_1_10.csv  geonewville_7janvier2cluster_ordre_1_2.csv  geonewville_7janvier2cluster_ordre_1_4.csv  geonewville_7janvier2cluster_ordre_1_5.csv  geonewville_7janvier2cluster_ordre_1_7.csv  geonewville_7janvier2cluster_ordre_1_8.csv  geonewville_8janvier2cluster_ordre_2_0.csv  grenoble.csv  (+84 more)
(+10 files in other folders)
